--- a/web/sites/all/modules/contrib/cck_signup/CHANGELOG.txt
+++ b/web/sites/all/modules/contrib/cck_signup/CHANGELOG.txt
@@ -1,20 +1,19 @@
-; $Id: CHANGELOG.txt,v 1.1.4.4 2011/02/11 21:38:16 jhedstrom Exp $
-DRUPAL-7--1-0-ALPHA4
---------------------
+DRUPAL-7--1-0-ALPHA4, 2011-02-11
+--------------------------------
 -Initial port from 6.x of the CCK Signup Basic configuration feature.
 
-DRUPAL-7--1-0-ALPHA3
---------------------
+DRUPAL-7--1-0-ALPHA3, 2011-02-07
+--------------------------------
 - Initial update from 6.x of the CCK Signup Restrictions module.
 - CCK Signup Group now working with the field_group module (update
   from fieldgroup).
 
-DRUPAL-7--1-0-ALPHA2
---------------------
+DRUPAL-7--1-0-ALPHA2, 2011-02-02
+--------------------------------
 - Initial update from 6.x of the CCK Signup Group module.
 
-DRUPAL-7--1-0-ALPHA1
---------------------
+DRUPAL-7--1-0-ALPHA1, 2011-01-30
+--------------------------------
 - Initial update from 6.x of the core CCK Signup module.
 
 DRUPAL-6--1-0-BETA1
